--- a/index.html
+++ b/index.html
@@ -65,5 +65,39 @@
       <span></span>
       <span></span>
     </div>
+
+    <!-- scared to be lonely -->
+    <a
+      href="songs/Martin Garrix & Dua Lipa - Scared To Be Lonely (Official Video).mp3"
+      ><img
+        class="mgafraidtobelonely"
+        src="images/Songs/mg afraid to be lonely.webp"
+        alt=""
+    /></a>
+
+    <!-- Marshmello x Jonas Brothers leave before u love me -->
+    <a
+      href="songs/Marshmello x Jonas Brothers - Leave Before You Love Me (Official Music Video).mp3"
+      ><img
+        class="mjleavebeforeuloveme"
+        src="images/Songs/marsh and jonas leave before u love me.jpg"
+        alt="Leave Before You Love Me"
+    /></a>
+
+    <!-- Thunder imGIN dragons -->
+    <a href="songs/Imagine Dragons - Thunder.mp3"
+      ><img
+        class="imgdragthunder"
+        src="images/Songs/thunder imagin dragons.jpg"
+        alt="Imagin Dragons Thunder"
+    /></a>
+
+    <!-- Martin Garrix Quantum -->
+    <a href="songs/Martin Garrix & Brooks - Quantum (Official Video).mp3"
+      ><img
+        class="mgquantum"
+        src="images/Songs/Martin Garrix Quantum.jpg"
+        alt="Martin Garrix ft Brooks Quantum"
+    /></a>
   </body>
 </html>
