--- a/index.html
+++ b/index.html
@@ -18,20 +18,17 @@
     /></a>
     <a href="songs/Avicii - Waiting For Love.mp3"
       ><img
-        class="avwaitingforlove"
+        class="one"
         src="images/Songs/waiting for love.jpg"
         alt="Waiting for love"
     /></a>
     <a href="songs/Avicii - Without You “Audio” ft. Sandro Cavazza.mp3"
-      ><img
-        class="avwithoutyou"
-        src="images/Songs/without you.jpg"
-        alt="Without You"
+      ><img class="two" src="images/Songs/without you.jpg" alt="Without You"
     /></a>
     <a
       href="songs/Alan Walker & Torine - Hello World (Official Music Video).mp3"
       ><img
-        class="awhelloworld"
+        class="three"
         src="images/Songs/hello world alan walker.jpg"
         alt="Alan Walker Hello World"
     /></a>
@@ -39,7 +36,7 @@
     <a
       href="songs/Alan Walker - All Falls Down (feat. Noah Cyrus with Digital Farm Animals).mp3"
       ><img
-        class="awallfallsdown"
+        class="four"
         src="images/Songs/all falls down.jpg"
         alt="Alan Walker All Falls Down"
     /></a>
@@ -69,17 +66,14 @@
     <!-- scared to be lonely -->
     <a
       href="songs/Martin Garrix & Dua Lipa - Scared To Be Lonely (Official Video).mp3"
-      ><img
-        class="mgafraidtobelonely"
-        src="images/Songs/mg afraid to be lonely.webp"
-        alt=""
+      ><img class="five" src="images/Songs/mg afraid to be lonely.webp" alt=""
     /></a>
 
     <!-- Marshmello x Jonas Brothers leave before u love me -->
     <a
       href="songs/Marshmello x Jonas Brothers - Leave Before You Love Me (Official Music Video).mp3"
       ><img
-        class="mjleavebeforeuloveme"
+        class="six"
         src="images/Songs/marsh and jonas leave before u love me.jpg"
         alt="Leave Before You Love Me"
     /></a>
@@ -87,17 +81,23 @@
     <!-- Thunder imGIN dragons -->
     <a href="songs/Imagine Dragons - Thunder.mp3"
       ><img
-        class="imgdragthunder"
+        class="eight"
         src="images/Songs/thunder imagin dragons.jpg"
         alt="Imagin Dragons Thunder"
     /></a>
 
     <!-- Martin Garrix Quantum -->
+
     <a href="songs/Martin Garrix & Brooks - Quantum (Official Video).mp3"
       ><img
-        class="mgquantum"
+        class="seven"
         src="images/Songs/Martin Garrix Quantum.jpg"
         alt="Martin Garrix ft Brooks Quantum"
-    /></a>
+      />
+    </a>
+
+    <!-- Next button -->
+    <!-- HTML !-->
+    <a href="2page.html" class="button-62" role="button">Next Page</a>
   </body>
 </html>
